--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,8 +58,35 @@
                     <p class="text">Работы выполняются "под ключ", от <br>проектирования до публикации в <br>магазинах.</p>
                 </div>
             </div>
-            
+            <div class="blocks blocks-fs">
+                <div class="download-link-wrapper">
+                    <img src="images/file_pdf.png" alt="pdf file icon">
+                    <div class="download-link-wrapper-right">
+                        <a href="uploads/app_example_presentation.pdf" target="_blank">Посмотреть пример</a>
+                        <p>Пример приложения,<br>разработанного нами</p>
+                    </div>
+                </div>
+                <div class="download-link-wrapper">
+                    <img src="images/file_pdf.png" alt="pdf file icon">
+                    <div class="download-link-wrapper-right">
+                        <a href="uploads/app_example_presentation.pdf" target="_blank">Скачать бриф-анкету</a>
+                        <p>Скачать бриф-анкету<br>для уточнения задачи</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="request-order-btn">Отправить запрос</button>
+                </div>
+            </div>
         </div>
+    </section>
+    <section class="screen-2 screen-row">
+        <div class="content">
+            <div class="left">
+                <h2>Что мы делаем?</h2>
+            </div>
+        </div>
+    </section>
+    <section class="screen-3 screen-row">
     </section>
 </body>
 <footer>
