--- a/index.html
+++ b/index.html
@@ -84,9 +84,103 @@
             <div class="left">
                 <h2>Что мы делаем?</h2>
             </div>
+            <div class="right">
+                <div class="blocks">
+                    <div class="block">
+                        <img src="images/projecting.png" alt="projecting icon">
+                        <h3>Проектируем приложения</h3>
+                        <p>Проектируем от высокоуровневых <br>требований до детальной спецификации <br>и прототипов.</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/mobile.png" alt="mobile icon">
+                        <h3>Пользовательский интерфейс</h3>
+                        <p>Разрабатываем современный <br>пользовательский интерфейс для <br>мобильных приложения</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/socials.png" alt="socials icon">
+                        <h3>Программируем</h3>
+                        <p>Разрабатываем нативные мобильные <br>приложения. Широкий диапазон <br>устройств, версий и быстродействие.</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/cogbig.png" alt="cogbig icon">
+                        <h3>Разрабатываем Back-end</h3>
+                        <p>Проектируем и разрабатываем <br>серверную часть для мобильного <br>приложения (если требуется).</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/arrows.png" alt="arrows icon">
+                        <h3>Обслуживаем и развиваем</h3>
+                        <p>Осуществляем поддержку, реакцию на <br>ошибки, обновления для новых версий <br>прошивок и устройств.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="screen-3 screen-row">
+        <div class="content">
+            <div class="left">
+                <h2>Специализация</h2>
+            </div>
+            <div class="right">
+                <div class="blocks">
+                    <div class="block">
+                        <img src="images/mobile.png" alt="mobile icon">
+                        <h3>Приложения для клиентов</h3>
+                        <p>Приложения для клиентов бизнеса с <br>возможностью онлайн-заказов, <br>коммуникаций и т.д.</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/mobile.png" alt="mobile icon">
+                        <h3>Коммуникационные приложения</h3>
+                        <p>Приложения для видео/аудио <br>коммуникации между пользователями <br>и/или сотрудниками.</p>
+                    </div>
+                    <div class="block">
+                        <img src="images/mobile.png" alt="mobile icon">
+                        <h3>Все, кроме игр</h3>
+                        <p>У нас нет опыта в разработке игровых <br>мобильных приложений. Такие заказы <br>мы не берем.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="screen-4 screen-row">
+            <div class="content">
+                <div class="left">
+                    <h2>Почему мы?</h2>
+                </div>
+                <div class="right">
+                    <div class="blocks">
+                        <div class="block">
+                            <img src="images/projecting.png" alt="projecting icon">
+                            <h3>Продуктовый подход</h3>
+                            <p>Мы работаем с продуктом, а не с кодом <br>или человеко-часами. Внимательное <br>отношение к концепции, ключевым <br>задачам и ожиданиям.</p>
+                        </div>
+                        <div class="block">
+                            <img src="images/corporate.png" alt="corporate icon">
+                            <h3>Опыт и компетенции</h3>
+                            <p>Занимаемся разработкой более 4-х лет. Наработан существенный опыт и продуктовая компетенция в различных отраслях.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="screen-5 screen-row">
+            <div class="content">
+                <div class="left">
+                    <h2>Бюджеты и сроки</h2>
+                </div>
+                <div class="right">
+                    <div class="blocks">
+                        <div class="block">
+                            <h3>Минимальный бюджет <br><br>от <span>300</span> тыс. руб.</h3>
+                        </div>
+                        <div class="block">
+                            <h3>Средний срок разработки <br><br><span>3 – 5</span> месяцев</h3>
+                        </div>
+                        <div class="block">
+                            <h3>Средний размер проектной команды <br><br><span>4 – 12</span> человек</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 </body>
 <footer>
