--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <div class="content">
             <div class="link">
                 <nav>
-                    <a href="https://fflames.ru">Компания</a>
-                    <a href="https://fflames.ru">Услуги</a>
-                    <a href="https://fflames.ru">Портфолио</a>
-                    <a href="https://fflames.ru">Контакты</a>
+                    <a target="_blank" href="https://fflames.ru/about">Компания</a>
+                    <a target="_blank" href="https://fflames.ru/service">Услуги</a>
+                    <a target="_blank" href="https://fflames.ru/contacts">Контакты</a>
                 </nav>
             </div>
             <div class="right">
