--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <img src="images/diamond.png" alt="diamond">
                     </div>
                     <p class="title">Кроссплатформенная разработка</p>
-                    <p class="text">Мы разработываем <br>мобильные приложения <br>под платформы iOS и Android.</p>
+                    <p class="text">Мы разрабатываем <br>мобильные приложения <br>под платформы iOS и Android.</p>
                 </div>
                 <div class="block">
                     <div class="img-wrap">
