--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Разработка мобильных приложений - Flames Studio</title>
     <meta property="og:title" content="Разработка мобильных приложений в Сургуте - Flames Studio" />
     <meta property="og:description" content="Разработка мобильных приложений и сложных интернет проектов" />
-    <meta property="og:image" content="og.jpg" />
+    <meta property="og:image" content="og_app.jpg" />
     <meta property="og:image:type" content="image/jpg" />
 </head>
 <body>
